--- a/lib/_base.sass
+++ b/lib/_base.sass
@@ -1,11 +1,8 @@
-extension = ""
-
-=font-face(!font,!filename, !type = "opentype")
-  font-family:  \#{!font}
-  src: url("fonts/\#{!filename}.eot")
-  @if !type == "opentype"
-    !extension = "otf"
+=font-face($font, $filename, $type: opentype)
+  font-family: $font
+  src: url("fonts/#{$filename}.eot")
+  @if $type == "opentype"
+    $extension: otf
   @else
-    !extension = "ttf"
-
-  src: local("\#{!font} Regular"), local("\#{!font}-Regular"), local("\#{!font}"), url("fonts/\#{!filename}.\#{!extension}") format("\#{!type}")
+    $extension: ttf
+  src: local("#{$font} Regular"), local("#{$font}-Regular"), local(#{$font}), url("fonts/#{$filename}.#{$extension}") format(#{$type})
