Me gustan más las minúsculas.

--- a/lib/application.sass
+++ b/lib/application.sass
@@ -29,12 +29,12 @@ a img
   margin:           10px 0
 
 #flash_notice
-  background-color: #CFC
-  border:           1px solid #6C6
+  background-color: #cfc
+  border:           1px solid #6c6
 
 #flash_error
-  background-color: #FCC
-  border:           solid 1px #C66
+  background-color: #fcc
+  border:           solid 1px #c66
 
 .fieldWithErrors
   display:          inline
