Elementos para incluir markitup automáticamente en los textarea de los formularios.

--- a/lib/simple_form/scaffold/_form.html.haml.erb
+++ b/lib/simple_form/scaffold/_form.html.haml.erb
@@ -1,3 +1,5 @@
+- render 'shared/js_form'
+
 = simple_form_for @<%= file_name %> do |form|
 
   = render 'shared/errors', :record => @<%= file_name %>
