--- a/lib/javascripts/markitup/skins/simple/style.css
+++ b/lib/javascripts/markitup/skins/simple/style.css
@@ -7,7 +7,7 @@
 {
   background: #f0f0f0 url(images/bg-container.png) repeat-x scroll left top;
   border:     1px solid #3c769d;
-  padding:    5px;
+  padding:    0.3em 1em;
 }
 
 .markItUpEditor
