--- a/lib/application.html.haml
+++ b/lib/application.html.haml
@@ -1,9 +1,9 @@
-!!! Strict
+!!!
 %html{html_attrs(I18n.locale)}
 
   %head
     %title= h(yield(:title) || "Untitled")
-    %meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}
+    %meta{:charset => "utf-8"}
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'jquery', 'rails'
     = csrf_meta_tag
